# P4Ward

./: README.md
authentication_client/: CMakeLists.txt  README.md  auth-headers.c  auth-headers.h  auth.c
authentication_client_py/: __main__.py  scapy_ext.py
authentication_server/: README.md  __init__.py  __main__.py  server.py  user.py
authentication_server/config/: server.py
authentication_server/config/configs/: bind_config.py  users_config.py
framework/: README.md
framework/control_plane/: __init__.py  __main__.py  helper.py  switch.py  tracing.py
framework/control_plane/config/: preload.py  protocol.py  switch.py
framework/control_plane/config/configs/: auth_config.py  bandwidth_config.py  data_plane_config.py  dns_config.py  features_config.py  mud_config.py  networks_config.py  router_hello_config.py
framework/control_plane/config/preloads/: arp_preload.py  device_preload.py  l2_preload.py  l3_preload.py  mud_preload.py
framework/control_plane/controllers/: controller.py
framework/control_plane/data_plane/: __init__.py  register.py  table.py
framework/data_plane/: egress.p4  ingress.p4  switch.p4  types.p4
framework/data_plane/controls/: acl.p4  arp.p4  auth.p4  device_validator.p4  routing.p4
framework/data_plane/headers/: arp.p4  eap.p4  enip.p4  ethernet.p4  goose.p4  helper.p4  icmp.p4  ipv4.p4  ipv6.p4  modbus.p4  monitoring.p4  opcua.p4  tcp.p4  udp.p4
mud_files/: goose.json  modbus-opcua-1.json  modbus-opcua-2.json  modbus-opcua-3.json
proto/: authentication_access.proto  gen.sh
(+53 files in other folders)
